--- a/lesson-1/style.css
+++ b/lesson-1/style.css
@@ -11,3 +11,14 @@
 .product-item {
     background-color: gray;
 }
+
+.head {
+    min-height: 70px;
+    background-color: gray;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.invisible {
+    display: none;
+}
